--- a/TDL/web/Views/Shared/_Layout.cshtml
+++ b/TDL/web/Views/Shared/_Layout.cshtml
@@ -24,19 +24,31 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                       
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Note" asp-action="Index">Notes</a>
                         </li>
                         <li>
                              <a class="nav-link text-dark" asp-area="" asp-controller="Tag" asp-action="Index">Tag</a>
                          </li>
-                                           
+                        @if (User.Identity?.IsAuthenticated ?? false)
+                        {
+                            <li class="nav-item">
+                                <form asp-controller="User" asp-action="Logout" method="post" class="d-inline">
+                                    <button type="submit" class="btn btn-link nav-link">Выйти (@User.Identity.Name)</button>
+                                </form>
+                            </li>
+                        }
+                        else
+                        {
+                            
+                            <li class="nav-item">
+                                <form asp-controller="User" asp-action="ExternalLoginGoogle" method="get" class="d-inline">
+                                    <button type="submit" class="btn btn-outline-danger nav-link">Google</button>
+                                </form>
+                            </li>
+                        }
+
                     </ul>
                 </div>
             </div>
