--- a/TDL/web/Views/Home/Index.cshtml
+++ b/TDL/web/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">My Git Hub</h1>
+    <p>See <a href="https://github.com/Timofey-FT/TDL">Поставте Like <3 </a>.</p>
 </div>
